# vibe-hiring

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/data/: talentdrop.db-shm  talentdrop.db-wal
backend/src/: main.py  seed.py
backend/src/api/: answers.py  auth.py  chat.py  company.py  drop.py  graph.py  matching.py  profile.py  questions.py  resume.py  roles.py  scores.py
backend/src/core/: config.py  deps.py  logging.py
backend/src/data/: career_questions.py  career_questions_ext.py  company_questions.py  company_questions_ext.py  company_scoring_maps.py  scoring_maps.py  seed_data.py
backend/src/models/: chat.py  company.py  database.py  dna_score.py  match.py  profile.py  questionnaire.py  role.py  user.py
backend/src/services/: aggregation.py  cas.py  chat_service.py  company_scoring.py  drop.py  graph_service.py  llm_report.py  matching.py  report.py  resume_service.py  scoring.py
discuss/: README.md  anti-gaming-mechanism.md  brainstorm.md  company-dna-design.md  company-dna-full.md  demo-dataset.md  demo-phase1-gap-analysis.md  demo-script-3min.md  demo-script.md  matching-algorithm-research.md  matching-architecture.md  pitch-theoretical-foundation.md  question-bank-design.md  question-bank-full.md
discuss/en/: anti-gaming-mechanism.md  brainstorm.md  (+2 more)
frontend/: Dockerfile
nginx/: nginx.conf
prototype/: index.html
scripts/: deploy-prod.sh  deploy.sh  dev-backend.sh  dev-frontend.sh  docker-up.sh  init-ssl.sh  seed-db.sh
(+51 files in other folders)
